testsuite/tests/libraries/should_compile/lib003.alan
convert():proc
  i : int;
  b : byte;
{
  b = shrink(42);
  i = extend(b);
}
